--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@ background: linear-gradient(
 .menu > li > a {
   text-decoration: none;
   color: white;
-  font-size: 24px;
+  font-size: 20px;
+  font-weight: bolder;
   transition: color 0.3s;
 }
 
@@ -111,7 +112,9 @@ hr {
 }
 
 .logo {
-  height: 100px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: 80px;
   width: auto;
 }
 
