--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ hr {
   color: #003366;
   padding: 1rem;
   background-color: #fff;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .contact-title {
@@ -581,7 +581,7 @@ h1 {
 
 .course-detail-container {
   display: flex;
-  min-height:85vh;
+  min-height: 100vh;
   flex-direction: row; 
   align-items: flex-start;
   justify-content: space-between;
