--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ background: linear-gradient(
   rgba(10, 27, 44, 0.9),
   rgba(17, 34, 68, 0.7),
   rgba(35, 69, 103, 0.9)
-), url('../src//Bg2.jpg');
+), url('../src/Bg2.jpg');
   padding: 0.2rem 5rem;
   font-family: 'Segoe UI', sans-serif;
   display: flex;
@@ -119,7 +119,7 @@ hr {
 }
 
 .home {
-  background-image: url('../src//Bg2.jpg');
+  background-image: url('../src/Bg2.jpg');
   background-size:cover;
   background-position: center;
   min-height: 100vh;
