--- a/src/App.css
+++ b/src/App.css
@@ -145,21 +145,94 @@ hr {
 /* Responsive - Home Page */
 @media (max-width: 400px) {
   .home {
-    height: 100vh;
+    height: 145vh;
+    
   }
   .overlay-text {
     top: 20%;
     left: 50%;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    width: 90%;
     transform: translateX(-50%);
     text-align: center;
     padding: 0 1rem;
   }
 }
+/* Hamburger icon styling */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+  z-index: 1001;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  transition: 0.3s;
+  border-radius: 3px;
+}
+
+/* Show hamburger on small screens */
+@media (max-width: 768px) {
+  .navbar {
+    flex-wrap: wrap;
+    position: relative;
+  }
+
+  .hamburger {
+    display: flex;
+    margin-left: auto;
+    margin-top: auto;
+  }
+
+  .menu {
+    display: none;
+    flex-direction: column;
+    background: linear-gradient(
+  to right,
+  rgba(120, 125, 130, 0.9),
+  rgba(35, 69, 103, 0.9),
+  rgba(120, 125, 130, 0.9)
+), url('../src/Bg2.jpg');
+background-size: cover;
+    position:absolute;
+    top: 80%;
+    left: 60%;
+    width: 100%;
+    padding: 0.5rem 2rem;
+    gap: 1.5rem;
+    z-index: 999;
+    border-radius: 10px;
+
+  }
+
+  .menu.open {
+    display: flex;
+  }
+
+  .menu > li {
+    width: 100%;
+  }
+
+  .menu > li > a {
+    font-size: 1.1rem;
+    color: white; 
+  }
+
+  .navbar {
+    flex-wrap: wrap;
+    position: relative;
+    height: 80px;
+    padding: 0.5rem 2rem;
+  }
+}
+
 
 .footer {
   background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-  /* background-color: black; */
   position: fixed;
   bottom: 0;
   width: 100%;
