--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-
+/*Header*/
 .navbar {
 background: linear-gradient(
   to right,
@@ -118,6 +118,7 @@ hr {
   width: auto;
 }
 
+/*Homepage*/
 .home {
   background-image: url('../src/Bg2.jpg');
   background-size: cover;
@@ -158,7 +159,6 @@ hr {
     padding: 0 1rem;
   }
 }
-/* Hamburger icon styling */
 .hamburger {
   display: none;
   flex-direction: column;
@@ -230,7 +230,7 @@ background-size: cover;
   }
 }
 
-
+/*Footer page */
 .footer {
   background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
   position: fixed;
@@ -259,7 +259,7 @@ background-size: cover;
   }
 }
 
-/* On mobile (up to 768px), let footer be part of normal flow */
+/* On mobile (up to 768px)*/
 @media (max-width: 400px) {
   .footer {
     position: relative;
@@ -318,7 +318,6 @@ background-size: cover;
   margin-bottom: 0.5rem;
 }
 
-/* Founder section */
 .founder {
   display: flex;
   align-items: flex-start;
@@ -347,8 +346,6 @@ background-size: cover;
   object-fit: cover;
 }
 
-
-/* Vision-Mission Flex Layout */
 .vision-mission {
   display: flex;
   flex-wrap: wrap;
@@ -772,6 +769,72 @@ h1 {
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
 }
 
+@media (max-width: 480px) {
+  .course-detail-container {
+    flex-direction: column;
+    padding: 1.5rem 1rem;
+    gap: 1.5rem;
+    min-height: auto;
+  }
+
+  .course-text {
+    flex: 1 1 100%;
+  }
+
+  .course-text h2 {
+    font-size: 2rem;
+  }
+
+  .course-text h3 {
+    font-size: 1.4rem;
+  }
+
+  .course-text p {
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .course-text li {
+    font-size: 1rem;
+    padding-left: 1.2rem;
+  }
+
+  .course-text li::before {
+    font-size: 0.9rem;
+    top: 1px;
+  }
+
+  .course-image-group {
+    flex: 1 1 100%;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .image-box {
+    padding: 0.5rem;
+  }
+
+  .image-box img {
+    width: 100%;
+    height: auto;
+  }
+
+  .img-label {
+    font-size: 0.95rem;
+  }
+
+  .course-image {
+    flex: 1 1 100%;
+  }
+
+  .course-image img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+}
+
 /* COE page */
 
 .coe-page {
@@ -898,36 +961,6 @@ h1 {
   .tab-menu {
     flex-direction: column;
     gap: 10px;
-  }
-
-  .course-card {
-    width: 100%;
-  }
-
-  .card-image {
-    height: 200px;
-  }
-
-  .course-text h2 {
-    font-size: 1.5rem;
-  }
-
-  .course-text h3 {
-    font-size: 1.2rem;
-  }
-
-  .course-text p,
-  .course-text li {
-    font-size: 0.95rem;
-  }
-
-  .course-detail-container {
-    padding: 1rem;
-  }
-
-  .course-image img {
-    max-width: 100%;
-    height: auto;
   }
 
   .coe-page h2 {
