--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ background: linear-gradient(
   rgba(10, 27, 44, 0.9),
   rgba(17, 34, 68, 0.7),
   rgba(35, 69, 103, 0.9)
-), url('../src/Bg2.jpg');
+), url('../src/assets/Bg2.jpg');
   padding: 0.2rem 5rem;
   font-family: 'Segoe UI', sans-serif;
   display: flex;
@@ -120,7 +120,7 @@ hr {
 
 /*Homepage*/
 .home {
-  background-image: url('../src/Bg2.jpg');
+  background-image: url('./assets/Bg2.jpg');
   background-size: cover;
   background-position: center;
   min-height: 85vh;
@@ -196,7 +196,7 @@ hr {
   rgba(120, 125, 130, 0.9),
   rgba(35, 69, 103, 0.9),
   rgba(120, 125, 130, 0.9)
-), url('../src/Bg2.jpg');
+), url('./assets/Bg2.jpg');
 background-size: cover;
     position:absolute;
     top: 80%;
@@ -1239,7 +1239,7 @@ h1 {
 }
 
 .cart-table tfoot td {
-  background-color: #f9f9f9;
+  background-color: #eae9e9;  
 }
 
 .checkout-button {
@@ -1273,18 +1273,28 @@ h1 {
 .cart-wrapper {
   flex: 1; 
   min-width: 450px;
-  background-color:white;
-  padding: 15px;
-  border-radius: 12px;
-  /* box-shadow: 0 0 8px rgba(0, 0, 0, 0.1); */
+  background: linear-gradient(135deg, #f5f9ff, #e0ecff); /* Light blue gradient */
+  padding: 20px;
+  border-radius: 25px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
   max-height: 50%;
-  overflow-y:auto;
+  overflow-y: auto;
+  border: 1px solid #cbd6e2;
+  transition: transform 0.3s ease;
+}
+
+.cart-wrapper:hover {
+  transform: translateY(-2px);
 }
 
 .cart-wrapper h2 {
   margin-top: 0px;
   text-align: center;
+  color: #003366;
+  font-size: 24px;
+  font-weight: 600;
 }
+
 
 @media (max-width: 768px) {
   .content-wrapper {
